Изменен метод подключения к БД
